# lichessko

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/bot/: main.py
src/utils/: env.py
